AC_INIT([YARP],[_YP_VERSION],[https://github.com/ruby/yarp/issues/new],[yarp],[https://github.com/ruby/yarp])

AC_PROG_CC
AC_DEFINE([_XOPEN_SOURCE], [700], [_XOPEN_SOURCE])

AC_CHECK_FUNCS([mmap])
AC_CHECK_FUNCS([snprintf])

AC_CONFIG_HEADERS([include/yarp/config.h:config.h.in])
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
