[package]
name = "prism-sys"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/ruby/prism"
description = "Rust bindings to Ruby's prism parsing library"
links = "prism"
authors = [
    "Steve Loveless <steve.loveless@gmail.com>",
    "Ian Ker-Seymer <hello@ianks.com>",
    "Kevin Newton <kddnewton@gmail.com>"
]
keywords = ["ruby", "parser", "ffi", "bindings"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "external-ffi-bindings",
    "parsing",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.66"
