[package]
name = "prism-sys"
version = "0.17.0"
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/ruby/prism"
description = "Rust bindings to Ruby's prism parsing library"
links = "prism"
authors = [
    "Steve Loveless <steve.loveless@gmail.com>",
    "Ian Ker-Seymer <hello@ianks.com>",
    "Kevin Newton <kddnewton@gmail.com>",
]
keywords = ["ruby", "parser", "ffi", "bindings"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "external-ffi-bindings",
    "parsing",
]
build = "build/main.rs"
include = ["src/", "build/", "Cargo.toml", "Cargo.lock", "README.md", "vendor"]

[build-dependencies]
bindgen = "0.66"
cc = { version = "1.0", optional = true }

[features]
default = ["vendored"]
vendored = ["dep:cc"]
