[package]
name = "ruby-prism"
version = "1.4.0"
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/ruby/prism"
description = "Rustified version of Ruby's prism parsing library"
authors = [
    "Steve Loveless <steve.loveless@gmail.com>",
    "Ian Ker-Seymer <hello@ianks.com>",
    "Kevin Newton <kddnewton@gmail.com>",
]
keywords = ["ruby", "parser", "ffi", "bindings"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "external-ffi-bindings",
    "parsing",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
include = ["src/", "build.rs", "Cargo.toml", "Cargo.lock", "vendor"]

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[dependencies]
ruby-prism-sys = { version = "1.4.0", path = "../ruby-prism-sys" }

[features]
default = ["vendored"]
vendored = ["ruby-prism-sys/vendored"]
