[package]
name = "yarp-sys"
version = "0.1.0"
edition = "2021"
license-file = "../../LICENSE.md"
repository = "https://github.com/ruby/yarp"
description = "Rust bindings to Ruby's YARP parsing library"
links = "yarp"
authors = [
    "Steve Loveless <steve.loveless@gmail.com>",
    "Ian Ker-Seymer <hello@ianks.com>",
]
keywords = ["ruby", "parser", "ffi", "bindings"]
categories = [
    "api-bindings",
    "development-tools::ffi",
    "external-ffi-bindings",
    "parsing",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
bindgen = "0.66"
